[gd_scene load_steps=22 format=3 uid="uid://bf8yxkl4ndx5n"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_4mfno"]
[ext_resource type="AudioStream" uid="uid://dip8tbeqdo6e4" path="res://Assets/Concrete 2.wav" id="2_r1qo2"]
[ext_resource type="PackedScene" uid="uid://cg3ioma67q0h4" path="res://Scenes/room_full1door.tscn" id="3_v6eic"]
[ext_resource type="Theme" uid="uid://cgyds23tgkbg0" path="res://Materials/HUD_theme.tres" id="5_vxma0"]
[ext_resource type="PackedScene" uid="uid://cs1ffj6omagk" path="res://Scenes/room_corner.tscn" id="6_c3lue"]
[ext_resource type="Script" path="res://Scripts/TimerLabel.gd" id="6_ovydt"]
[ext_resource type="Script" path="res://Scripts/ScaryTrigger.gd" id="7_0hfx0"]
[ext_resource type="AudioStream" uid="uid://d02dnrgtlj57f" path="res://Assets/512241__neospica__muffled-thud.wav" id="7_2jbr6"]
[ext_resource type="PackedScene" uid="uid://cusxu77hu6887" path="res://Scenes/room_full2door.tscn" id="7_ldip2"]
[ext_resource type="PackedScene" uid="uid://ihee1cdb4fof" path="res://Scenes/room_widehall.tscn" id="7_u8b8t"]
[ext_resource type="PackedScene" uid="uid://c73fvjm0fn2pc" path="res://Scenes/room_hall.tscn" id="8_trjkb"]
[ext_resource type="AudioStream" uid="uid://dqr8v1cy23g0u" path="res://Assets/626096__resaural__backrooms-ambience.wav" id="10_i4fgt"]
[ext_resource type="PackedScene" uid="uid://dh68rjn8qx6pe" path="res://Scenes/room_tjunction.tscn" id="10_qg3jw"]
[ext_resource type="AudioStream" uid="uid://cowhifrkhqotw" path="res://Assets/328538__quadraslayer__monster-roar-slow.wav" id="11_tw831"]
[ext_resource type="AudioStream" uid="uid://bebro3icvkppb" path="res://Assets/401041__eardeer__gateshutthumps.wav" id="12_rb6f7"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_djh10"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_yjisb"]
sky_material = SubResource("ProceduralSkyMaterial_djh10")

[sub_resource type="Environment" id="Environment_ekyfe"]
background_mode = 2
sky = SubResource("Sky_yjisb")
tonemap_mode = 3
glow_enabled = true
adjustment_enabled = true
adjustment_contrast = 1.18

[sub_resource type="CapsuleMesh" id="CapsuleMesh_u3yqc"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_govi1"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_1stb4"]
size = Vector3(3.63113, 4, 3.10332)

[node name="Root" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ekyfe")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("5_vxma0")

[node name="TimerLabel" type="Label" parent="HUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 43.0
offset_top = -84.0
offset_right = 494.0
offset_bottom = -37.0
grow_vertical = 0
theme_override_font_sizes/font_size = 31
text = "Time in Backrooms: 0 seconds"
vertical_alignment = 2
script = ExtResource("6_ovydt")

[node name="Timer" type="Timer" parent="HUD/TimerLabel"]
autostart = true

[node name="CharacterBody3d" type="CharacterBody3D" parent="." groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.24461, 0)
script = ExtResource("1_4mfno")
SPEED = 1.25
rotation_speed_x = 0.001
rotation_speed_y = 0.001
footstep_time = 0.45

[node name="MeshInstance3d" type="MeshInstance3D" parent="CharacterBody3d"]
mesh = SubResource("CapsuleMesh_u3yqc")

[node name="CollisionShape3d" type="CollisionShape3D" parent="CharacterBody3d"]
shape = SubResource("ConvexPolygonShape3D_govi1")

[node name="Neck" type="Node3D" parent="CharacterBody3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.656462, 0)

[node name="Camera3d" type="Camera3D" parent="CharacterBody3d/Neck"]

[node name="FootstepStreamPlayer3d" type="AudioStreamPlayer3D" parent="CharacterBody3d"]
stream = ExtResource("2_r1qo2")
volume_db = -45.0

[node name="FootstepTimer" type="Timer" parent="CharacterBody3d"]
one_shot = true

[node name="Static Nodes" type="Node3D" parent="."]

[node name="Room1" parent="Static Nodes" instance=ExtResource("3_v6eic")]

[node name="Room3" parent="Static Nodes" instance=ExtResource("7_u8b8t")]

[node name="Room4" parent="Static Nodes" instance=ExtResource("6_c3lue")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 20, 0, 10)

[node name="Room5" parent="Static Nodes" instance=ExtResource("8_trjkb")]

[node name="Room6" parent="Static Nodes" instance=ExtResource("6_c3lue")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 20, 0, 30)

[node name="Area3D" type="Area3D" parent="Static Nodes/Room6"]
script = ExtResource("7_0hfx0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Static Nodes/Room6/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53702, 0)
shape = SubResource("BoxShape3D_1stb4")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Static Nodes/Room6/Area3D"]
stream = ExtResource("7_2jbr6")

[node name="Room7" parent="Static Nodes" instance=ExtResource("7_ldip2")]

[node name="Room8" parent="Static Nodes" instance=ExtResource("6_c3lue")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 30)

[node name="Room9" parent="Static Nodes" instance=ExtResource("6_c3lue")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 40)

[node name="Room10" parent="Static Nodes" instance=ExtResource("10_qg3jw")]

[node name="Area3D" type="Area3D" parent="Static Nodes/Room10"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.15647, 0, 0)
script = ExtResource("7_0hfx0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Static Nodes/Room10/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53702, 0)
shape = SubResource("BoxShape3D_1stb4")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Static Nodes/Room10/Area3D"]
stream = ExtResource("11_tw831")

[node name="Room11" parent="Static Nodes" instance=ExtResource("3_v6eic")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -10, 0, 50)

[node name="Room12" parent="Static Nodes" instance=ExtResource("6_c3lue")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 40)

[node name="Room13" parent="Static Nodes" instance=ExtResource("7_u8b8t")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -20, 0, 30)

[node name="Room14" parent="Static Nodes" instance=ExtResource("7_ldip2")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -20, 0, 20)

[node name="Room16" parent="Static Nodes" instance=ExtResource("10_qg3jw")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -30, 0, 10)

[node name="Area3D" type="Area3D" parent="Static Nodes/Room16"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.39022, 0, -2.86102e-06)
script = ExtResource("7_0hfx0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Static Nodes/Room16/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.53702, 0)
shape = SubResource("BoxShape3D_1stb4")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="Static Nodes/Room16/Area3D"]
stream = ExtResource("12_rb6f7")

[node name="Room17" parent="Static Nodes" instance=ExtResource("3_v6eic")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0)

[node name="Room18" parent="Static Nodes" instance=ExtResource("3_v6eic")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -40, 0, 10)

[node name="Room15" parent="Static Nodes" instance=ExtResource("10_qg3jw")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 10)

[node name="Room19" parent="Static Nodes" instance=ExtResource("10_qg3jw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 10)

[node name="Room20" parent="Static Nodes" instance=ExtResource("8_trjkb")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -10, 0, 10)

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_i4fgt")
volume_db = -5.0
autoplay = true

[connection signal="timeout" from="HUD/TimerLabel/Timer" to="HUD/TimerLabel" method="_on_timer_timeout"]
[connection signal="body_entered" from="Static Nodes/Room6/Area3D" to="Static Nodes/Room6/Area3D" method="_on_body_entered"]
[connection signal="body_entered" from="Static Nodes/Room10/Area3D" to="Static Nodes/Room10/Area3D" method="_on_body_entered"]
[connection signal="body_entered" from="Static Nodes/Room16/Area3D" to="Static Nodes/Room16/Area3D" method="_on_body_entered"]
